<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rutino</string>
    <string name="no_wallets">No Wallets Yet</string>
    <string name="create_wallet">Add Wallet</string>
    <string name="update_wallet">Edit Wallet</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="no_accounts">No Accounts Yet</string>
    <string name="create_account">Add Account</string>
    <string name="update_account">Edit Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="no_transactions">No Transactions Yet</string>
    <string name="create_transaction">Add Transaction</string>
    <string name="update_transaction">Edit Transaction</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="create_periodic_transaction">Add Periodic Transaction</string>
    <string name="update_periodic_transaction">Edit Periodic Transaction</string>
    <string name="delete_periodic_transaction">Delete Periodic Transaction</string>
    <string name="list_periodic_transaction">List Periodic Transaction</string>
    <string name="no_periodic_transactions">No Periodic Transactions Yet</string>
    <string name="no_reports">No Reports Yet</string>
    <string name="create_report">Add Report</string>
    <string name="update_report">Edit Report</string>
    <string name="delete_report">Delete Report</string>
    <string name="list_report">List Report</string>
    <string name="report">Report</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="days">Days</string>
    <string name="periodicity">Periodicity</string>
    <string name="geotag">Geotag</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>
    <string name="total">Total</string>
    <string name="confirm">Confirm</string>
    <string name="preferences">Preferences</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="prefs_currency">Prefered currency</string>
    <string name="prefs_currencyText">Select Prefered currency</string>
    <string name="backupProgress">Exporting database…</string>
    <string name="backupOK">Export successful!!</string>
    <string name="backupKO">Export failed</string>
    <string name="restoreProgress">Importing database…</string>
    <string name="restoreOK">Import successful!!</string>
    <string name="restoreKO">Import failed</string>
    
    <!-- Message shown if the provided account doesn't support the current activity. -->
    <string name="report_date_validation_dialog">\'From\' date must be lower than \'To\' Date.</string>
    
    <!-- Label for this package -->
    <string name="label">RutinoAdapter</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>

    <!-- Permission label -->
    <string name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <!-- Permission description -->
    <string name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string name="notification_login_error">Touch to sign into your Sample SyncAdapter account.</string>

    <!-- Title string for Login activity -->
    <string name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>

    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!-- Message shown if the provided account doesn't support the current activity. -->
    <string name="login_activity_newaccount_text">Sign in to your Sample SyncAdapter account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string name="cancel_button_label">Cancel</string>
    <string name="ok">Ok</string>
    <string name="profile_action">Sample profile</string>
    <string name="view_profile">View Profile</string>

</resources>